fixed overflow error changed to height and min-height

--- a/evap/static/scss/components/_notebook.scss
+++ b/evap/static/scss/components/_notebook.scss
@@ -64,7 +64,7 @@
         }
 
         .notebook-card {
-            max-height: calc(45vh - (#{$spacer} * 1.5) * 2); //subtract spacer with padding
+            height: calc(45vh - (#{$spacer} * 1.5) * 2); //subtract spacer with padding
             min-height: 43.5vh; //approximation for size needed in smallest window (50vh - (spacer + leeway))
         }
     }
